c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_declarations.c
/* It's illegal to specify struct and union types with the same tag in the same scope */
struct x;
union x;

int main(void) {
    return 0;
}